Add features and fix bug as well as modifying design of the system