@@ -1,4 +1,4 @@
-package propertyRegistrationManagement;
+package LandRegistrationManagement;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import java.time.LocalDate;
@@ -15,12 +15,15 @@ class RegistrationTest {
         lands.add(land);
         persons.add(new Person("Buyer","Malek", 39358));
         persons.add(new Person("Seller", "Jobbar", 174459));
-        RegistrationBuilder buildReg = new RegistrationBuilder();
-        Registration registration = buildReg.setDate(LocalDate.of(2002,6, 23)).setRegNumber(7001).setRegOffice("Sreemangal").setLand(lands).setPrice(2000000).setPersons(persons).builder();
+        LandRegistered landRegistration = new LandRegistered();
+        landRegistration.getBuildRegistraion().setDate(LocalDate.of(2002,6, 23)).setRegNumber(7001).setRegOffice("Sreemangal").setLand(lands).setPrice(2000000).setPersons(persons);
+        Registration registration = landRegistration.getBuildRegistraion().builder();
         Assertions.assertNotNull(registration);
         Assertions.assertEquals(7001, registration.getRegNumber());
         Assertions.assertEquals("Sreemangal", registration.getRegOffice());
         Assertions.assertEquals(2000000, registration.getPrice());
-        Assertions.assertNotEquals(registration.getPersons().get(0).getClass(), registration.getPersons().get(1).getClass());
+        Assertions.assertEquals(LocalDate.parse("2002-06-23"), registration.getDate());
+        Assertions.assertEquals("Malek", registration.getPersons().getFirst().name());
+        Assertions.assertEquals("Ruposhpur", registration.getLand().getFirst().getArea());
     }
 }
